Remove Java21 only method